--- a/manifests/base/17-queue-master-dep.yaml
+++ b/manifests/base/17-queue-master-dep.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: queue-master
-          image: quay.io/cbade_cs/openshift-demo:sock-shop-queue-master
+          image: quay.io/powercloud/sock-shop-queue-master:latest
           imagePullPolicy: Always
           command: [ "/usr/bin/java" ]
           args: [ "-cp", "/opt/app.jar", "-Dloader.path=/opt/lib", "org.springframework.boot.loader.PropertiesLauncher", "--port=8080" ]
