--- a/manifests/base/25-user-dep.yaml
+++ b/manifests/base/25-user-dep.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: user
-          image: quay.io/cbade_cs/openshift-demo:sock-shop-user
+          image: quay.io/powercloud/sock-shop-user:latest
           imagePullPolicy: Always
           resources:
             limits:
