OCTOPUS-544: fix insecure edge redirect
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/manifests/base/29-route-front-end.yaml
+++ b/manifests/base/29-route-front-end.yaml
@@ -15,5 +15,5 @@ spec:
     targetPort: '8079' 
   tls:
     termination: edge
-    insecureEdgeTerminationPolicy: None
+    insecureEdgeTerminationPolicy: Redirect
   wildcardPolicy: None
