demo: update the taint for the customer discussion on frontend
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/manifests/overlays/multi-taint-front-end/09-front-end-dep.yaml
+++ b/manifests/overlays/multi-taint-front-end/09-front-end-dep.yaml
@@ -57,6 +57,7 @@ spec:
           emptyDir:
             medium: Memory
       tolerations:
-        - operator: "Exists"
-          key: "intel-customer-test-user-4"
+        - operator: "Equal"
+          key: "kubernetes.io/arch"
+          value: "ppc64le"
           effect: "NoSchedule"
