--- a/manifests/overlays/multi-mto/21-session-db-dep.yaml
+++ b/manifests/overlays/multi-mto/21-session-db-dep.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: session-db
-          image: redis:alpine
+          image: registry.redhat.io/rhel8/redis-5:1-171.1654147905
           imagePullPolicy: IfNotPresent
           ports:
             - name: redis
