--- a/manifests/overlays/multi-mto/00-storage-class.yaml
+++ b/manifests/overlays/multi-mto/00-storage-class.yaml
@@ -2,8 +2,7 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: nfs-client
+provisioner: k8s-sigs.io/nfs-subdir-external-provisioner
 parameters:
-  archiveOnDelete: "false"
-provisioner: nfs-storage
-reclaimPolicy: Delete
-volumeBindingMode: Immediate
+  pathPattern: "${.PVC.namespace}/${.PVC.annotations.nfs.io/storage-path}"
+  onDelete: delete
