--- a/manifests/overlays/fyre/01-carts-dep.yaml
+++ b/manifests/overlays/fyre/01-carts-dep.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
         - name: carts
           image: quay.io/cbade_cs/openshift-demo:sock-shop-carts
-          imagePullPolicy: Always #IfNotPresent
+          imagePullPolicy: IfNotPresent #IfNotPresent
           command: [ "/usr/bin/java" ]
           args: [ "-cp", "/opt/app.jar", "-Dloader.path=/opt/lib", "org.springframework.boot.loader.PropertiesLauncher", "--port=8080" ]
           env:
