--- a/manifests/base/05-catalogue-dep.yaml
+++ b/manifests/base/05-catalogue-dep.yaml
@@ -19,7 +19,7 @@ spec:
       containers:
         - name: catalogue
           image: quay.io/powercloud/sock-shop-catalogue:latest
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           command: [ "/opt/app" ]
           args:
             - -port=8080
