--- a/manifests/base/15-payment-dep.yaml
+++ b/manifests/base/15-payment-dep.yaml
@@ -19,7 +19,7 @@ spec:
       containers:
         - name: payment
           image: quay.io/powercloud/sock-shop-payment:latest
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           command: [ "/payment/app" ]
           args: [ "-port=8080" ]
           resources:
