--- a/manifests/overlays/multi-no-ns/09-front-end-dep.yaml
+++ b/manifests/overlays/multi-no-ns/09-front-end-dep.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
         - name: front-end
           image: quay.io/powercloud/sock-shop-front-end:latest
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           command: [ "/usr/bin/npm" ]
           args: [ "start" ]
           resources:
