--- a/manifests/overlays/power/01-carts-dep.yaml
+++ b/manifests/overlays/power/01-carts-dep.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
         - name: carts
           image: quay.io/powercloud/sock-shop-carts:latest
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           command: [ "/usr/bin/java" ]
           args: [ "-cp", "/opt/app.jar", "-Xms64m", "-Xmx128m", "-XX:+UseG1GC", "-Djava.security.egd=file:/dev/urandom", "-Dspring.zipkin.enabled=false", "-Dloader.path=/opt/lib", "org.springframework.boot.loader.PropertiesLauncher", "--port=8080" ]
           resources:
