--- a/manifests/overlays/power/07-catalogue-db-dep.yaml
+++ b/manifests/overlays/power/07-catalogue-db-dep.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
         - name: catalogue-db
           image: quay.io/powercloud/sock-shop-catalogue-db:ppc64le
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           env:
             - name: MARIADB_ROOT_PASSWORD
               valueFrom:
