--- a/manifests/overlays/power/11-orders-dep.yaml
+++ b/manifests/overlays/power/11-orders-dep.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
         - name: orders
           image: quay.io/powercloud/sock-shop-orders:latest
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           command: [ "/usr/bin/java" ]
           args: [ "-cp", "/app.jar", "-Xms64m", "-Xmx128m", "-XX:+UseG1GC", "-Djava.security.egd=file:/dev/urandom", "-Dspring.zipkin.enabled=false", "-Dloader.path=/opt/lib", "org.springframework.boot.loader.PropertiesLauncher", "--port=8080" ]
           resources:
