--- a/manifests/overlays/power/23-shipping-dep.yaml
+++ b/manifests/overlays/power/23-shipping-dep.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
         - name: shipping
           image: quay.io/powercloud/sock-shop-shipping:latest
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           command: [ "/usr/bin/java" ]
           args: [ "-cp", "/opt/app.jar", "-Dloader.path=/opt/lib", "org.springframework.boot.loader.PropertiesLauncher", "--port=8080" ]
           env:
