--- a/manifests/overlays/single-node-selector/25-user-dep.yaml
+++ b/manifests/overlays/single-node-selector/25-user-dep.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
         - name: user
           image: quay.io/powercloud/sock-shop-user:amd64
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           resources:
             limits:
               cpu: 300m
