--- a/manifests/overlays/single/05-catalogue-dep.yaml
+++ b/manifests/overlays/single/05-catalogue-dep.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
         - name: catalogue
           image: quay.io/powercloud/sock-shop-catalogue:amd64
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           command: [ "/opt/app" ]
           args:
             - -port=8080
