fix: update rabbitmq to use ghcr.io
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/manifests/base/19-rabbitmq-dep.yaml
+++ b/manifests/base/19-rabbitmq-dep.yaml
@@ -30,7 +30,7 @@ spec:
           securityContext:
             readOnlyRootFilesystem: false
         - name: rabbitmq-exporter
-          image: kbudde/rabbitmq-exporter
+          image: ghcr.io/kbudde/rabbitmq_exporter:1.0.0
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 9090
