--- a/manifests/overlays/fyre/07-catalogue-db-dep.yaml
+++ b/manifests/overlays/fyre/07-catalogue-db-dep.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: catalogue-db
-          image: weaveworksdemos/catalogue-db:0.3.0
+          image: quay.io/powercloud/sock-shop-catalogue-db:latest
           imagePullPolicy: IfNotPresent
           env:
             - name: MYSQL_ROOT_PASSWORD
