--- a/manifests/overlays/fyre/27-user-db-dep.yaml
+++ b/manifests/overlays/fyre/27-user-db-dep.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: user-db
-          image: weaveworksdemos/user-db:0.3.0
+          image: quay.io/powercloud/sock-shop-user-db:latest
           imagePullPolicy: IfNotPresent
           ports:
             - name: mongo
