--- a/manifests/overlays/single/21-session-db-dep.yaml
+++ b/manifests/overlays/single/21-session-db-dep.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: session-db
-          image: redis:alpine
+          image: registry.redhat.io/rhel9/redis-7:1-29.1726663415
           imagePullPolicy: IfNotPresent
           ports:
             - name: redis
