fix: switch to mongodb on quay.io
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/manifests/overlays/fyre/03-carts-db-dep.yaml
+++ b/manifests/overlays/fyre/03-carts-db-dep.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: carts-db
-          image: mongo
+          image: quay.io/mongodb/mongodb:org-4.4-standalone-ubuntu2204
           imagePullPolicy: IfNotPresent
           ports:
             - name: mongo
