--- a/manifests/base/19-rabbitmq-dep.yaml
+++ b/manifests/base/19-rabbitmq-dep.yaml
@@ -22,7 +22,7 @@ spec:
         - name: rabbitmq
           image: quay.io/powercloud/rabbitmq:latest
           imagePullPolicy: IfNotPresent
-          command: /usr/local/bin/docker-entrypoint.sh
+          command: ["/usr/local/bin/docker-entrypoint.sh"]
           ports:
             - containerPort: 15672
               name: management
