--- a/manifests/overlays/multi-no-ns/19-rabbitmq-dep.yaml
+++ b/manifests/overlays/multi-no-ns/19-rabbitmq-dep.yaml
@@ -21,6 +21,8 @@ spec:
         - name: rabbitmq
           image: quay.io/powercloud/rabbitmq:latest
           imagePullPolicy: IfNotPresent
+          command: ["/usr/bin/bash"]
+          args: ["/usr/local/bin/docker-entrypoint.sh", "rabbitmq-server"]
           ports:
             - containerPort: 15672
               name: management
