fix: 4.19 changes rhcos nodeSelector, selecting a backwards compatible label
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/manifests/base/11-orders-dep.yaml
+++ b/manifests/base/11-orders-dep.yaml
@@ -45,4 +45,4 @@ spec:
           emptyDir:
             medium: Memory
       nodeSelector:
-        node.openshift.io/os_id: rhcos
+        node-role.kubernetes.io/worker: ""
