--- a/manifests/base/19-rabbitmq-dep.yaml
+++ b/manifests/base/19-rabbitmq-dep.yaml
@@ -38,5 +38,5 @@ spec:
             - containerPort: 9090
               name: exporter
       nodeSelector:
-        node.openshift.io/os_id: rhcos
+        node-role.kubernetes.io/worker: ""
         kubernetes.io/arch: amd64
