--- a/manifests/overlays/fyre/19-rabbitmq-dep.yaml
+++ b/manifests/overlays/fyre/19-rabbitmq-dep.yaml
@@ -38,4 +38,4 @@ spec:
             - containerPort: 9090
               name: exporter
       nodeSelector:
-        node.openshift.io/os_id: rhcos
+        node-role.kubernetes.io/worker: ""
