--- a/manifests/overlays/fyre/21-session-db-dep.yaml
+++ b/manifests/overlays/fyre/21-session-db-dep.yaml
@@ -31,4 +31,4 @@ spec:
                 - all
             readOnlyRootFilesystem: true
       nodeSelector:
-        node.openshift.io/os_id: rhcos
+        node-role.kubernetes.io/worker: ""
