--- a/manifests/overlays/single-node-selector/15-payment-dep.yaml
+++ b/manifests/overlays/single-node-selector/15-payment-dep.yaml
@@ -52,4 +52,4 @@ spec:
             periodSeconds: 5
       nodeSelector:
         kubernetes.io/arch: amd64
-        node.openshift.io/os_id: rhcos
+        node-role.kubernetes.io/worker: ""
