--- a/manifests/overlays/single-node-selector/17-queue-master-dep.yaml
+++ b/manifests/overlays/single-node-selector/17-queue-master-dep.yaml
@@ -35,4 +35,4 @@ spec:
             - containerPort: 8080
       nodeSelector:
         kubernetes.io/arch: amd64
-        node.openshift.io/os_id: rhcos
+        node-role.kubernetes.io/worker: ""
