--- a/manifests/base/01-carts-dep.yaml
+++ b/manifests/base/01-carts-dep.yaml
@@ -44,4 +44,4 @@ spec:
           emptyDir:
             medium: Memory
       nodeSelector:
-        node.openshift.io/os_id: rhcos
+        node-role.kubernetes.io/worker: ""
