--- a/manifests/base/03-carts-db-dep.yaml
+++ b/manifests/base/03-carts-db-dep.yaml
@@ -37,5 +37,5 @@ spec:
           emptyDir:
             medium: Memory
       nodeSelector:
-        node.openshift.io/os_id: rhcos
+        node-role.kubernetes.io/worker: ""
         kubernetes.io/arch: amd64
