--- a/manifests/base/05-catalogue-dep.yaml
+++ b/manifests/base/05-catalogue-dep.yaml
@@ -52,4 +52,4 @@ spec:
             initialDelaySeconds: 180
             periodSeconds: 3
       nodeSelector:
-        node.openshift.io/os_id: rhcos
+        node-role.kubernetes.io/worker: ""
