--- a/manifests/base/13-orders-db-dep.yaml
+++ b/manifests/base/13-orders-db-dep.yaml
@@ -37,5 +37,5 @@ spec:
           persistentVolumeClaim:
             claimName: orders-db-temp-pvc
       nodeSelector:
-        node.openshift.io/os_id: rhcos
+        node-role.kubernetes.io/worker: ""
         kubernetes.io/arch: amd64
