--- a/manifests/base/15-payment-dep.yaml
+++ b/manifests/base/15-payment-dep.yaml
@@ -52,4 +52,4 @@ spec:
             initialDelaySeconds: 60
             periodSeconds: 5
       nodeSelector:
-        node.openshift.io/os_id: rhcos
+        node-role.kubernetes.io/worker: ""
