--- a/manifests/base/23-shipping-dep.yaml
+++ b/manifests/base/23-shipping-dep.yaml
@@ -53,4 +53,4 @@ spec:
           emptyDir:
             medium: Memory
       nodeSelector:
-        node.openshift.io/os_id: rhcos
+        node-role.kubernetes.io/worker: ""
