--- a/manifests/base/27-user-db-dep.yaml
+++ b/manifests/base/27-user-db-dep.yaml
@@ -37,5 +37,5 @@ spec:
           persistentVolumeClaim:
             claimName: user-db-temp-pvc
       nodeSelector:
-        node.openshift.io/os_id: rhcos
+        node-role.kubernetes.io/worker: ""
         kubernetes.io/arch: amd64
