--- a/manifests/overlays/fyre/09-front-end-dep.yaml
+++ b/manifests/overlays/fyre/09-front-end-dep.yaml
@@ -51,4 +51,4 @@ spec:
             initialDelaySeconds: 30
             periodSeconds: 3
       nodeSelector:
-        node.openshift.io/os_id: rhcos
+        node-role.kubernetes.io/worker: ""
