--- a/manifests/overlays/fyre/17-queue-master-dep.yaml
+++ b/manifests/overlays/fyre/17-queue-master-dep.yaml
@@ -35,4 +35,4 @@ spec:
           ports:
             - containerPort: 8080
       nodeSelector:
-        node.openshift.io/os_id: rhcos
+        node-role.kubernetes.io/worker: ""
