--- a/manifests/overlays/multi-no-ns/05-catalogue-dep.yaml
+++ b/manifests/overlays/multi-no-ns/05-catalogue-dep.yaml
@@ -51,4 +51,4 @@ spec:
             initialDelaySeconds: 180
             periodSeconds: 3
       nodeSelector:
-        node.openshift.io/os_id: rhcos
+        node-role.kubernetes.io/worker: ""
