--- a/manifests/overlays/multi-no-ns/13-orders-db-dep.yaml
+++ b/manifests/overlays/multi-no-ns/13-orders-db-dep.yaml
@@ -36,5 +36,5 @@ spec:
           persistentVolumeClaim:
             claimName: orders-db-temp-pvc
       nodeSelector:
-        node.openshift.io/os_id: rhcos
+        node-role.kubernetes.io/worker: ""
         kubernetes.io/arch: amd64
