--- a/manifests/overlays/power/07-catalogue-db-dep.yaml
+++ b/manifests/overlays/power/07-catalogue-db-dep.yaml
@@ -48,4 +48,4 @@ spec:
             medium: Memory
       nodeSelector:
         kubernetes.io/arch: ppc64le
-        node.openshift.io/os_id: rhcos
+        node-role.kubernetes.io/worker: ""
