--- a/manifests/overlays/power/23-shipping-dep.yaml
+++ b/manifests/overlays/power/23-shipping-dep.yaml
@@ -52,4 +52,4 @@ spec:
           emptyDir:
             medium: Memory
       nodeSelector:
-        node.openshift.io/os_id: rhcos
+        node-role.kubernetes.io/worker: ""
