--- a/manifests/overlays/single-node-selector/03-carts-db-dep.yaml
+++ b/manifests/overlays/single-node-selector/03-carts-db-dep.yaml
@@ -36,5 +36,5 @@ spec:
           emptyDir:
             medium: Memory
       nodeSelector:
-        node.openshift.io/os_id: rhcos
+        node-role.kubernetes.io/worker: ""
         kubernetes.io/arch: amd64
