--- a/manifests/overlays/single-node-selector/09-front-end-dep.yaml
+++ b/manifests/overlays/single-node-selector/09-front-end-dep.yaml
@@ -58,4 +58,4 @@ spec:
             medium: Memory
       nodeSelector:
         kubernetes.io/arch: amd64
-        node.openshift.io/os_id: rhcos
+        node-role.kubernetes.io/worker: ""
