--- a/manifests/overlays/single-node-selector/25-user-dep.yaml
+++ b/manifests/overlays/single-node-selector/25-user-dep.yaml
@@ -53,4 +53,4 @@ spec:
             periodSeconds: 3
       nodeSelector:
         kubernetes.io/arch: amd64
-        node.openshift.io/os_id: rhcos
+        node-role.kubernetes.io/worker: ""
